--- a/templates/contact.html
+++ b/templates/contact.html
@@ -18,7 +18,7 @@
     <div class="box2">
       <div class="logo">
         <div class="logo1">
-          <img src="images/logo.png">
+          <img src="static/styles/images/logo.png">
         </div>
         <div class="txt"><h3>Dito sa Rizal</h3></div>
       </div>
